# ClearerVoice-Studio

./: README.md  requirements.txt
clearvoice/: README.md  demo.py  demo_Numpy2Numpy.py  network_wrapper.py  networks.py  pyproject.toml  streamlit_app.py
clearvoice/clearvoice/: __init__.py  network_wrapper.py  networks.py
clearvoice/clearvoice/config/inference/: MossFormer2_SR_48K.yaml  MossFormer2_SS_16K.yaml
clearvoice/clearvoice/dataloader/: dataloader.py
clearvoice/clearvoice/models/av_mossformer2_tse/: av_mossformer2.py
clearvoice/clearvoice/models/av_mossformer2_tse/faceDetector/s3fd/: __init__.py
clearvoice/clearvoice/models/av_mossformer2_tse/mossformer/utils/: Transformer.py  one_path_flash_fsmn.py
clearvoice/clearvoice/models/frcrn_se/: frcrn.py  unet.py
clearvoice/clearvoice/models/mossformer2_se/: mossformer2.py  mossformer2_se_wrapper.py
clearvoice/clearvoice/models/mossformer2_sr/: generator.py  mossformer2.py  mossformer2_block.py  mossformer2_sr_wrapper.py
clearvoice/clearvoice/models/mossformer2_ss/: mossformer2.py  mossformer2_block.py
clearvoice/clearvoice/models/mossformer_gan_se/: discriminator.py  generator.py  mossformer.py
clearvoice/clearvoice/utils/: decode.py  decode_batch.py  misc.py  video_process.py
clearvoice/dataloader/: dataloader.py
clearvoice/samples/: speech2.pkf
clearvoice/utils/: decode.py
speechscore/: README.md  basis.py  demo.py  speechscore.py
train/speech_enhancement/: README.md  solver.py
train/speech_separation/: solver.py
train/speech_super_resolution/: README.md  inference.py  inference.sh  (+4 more)
(+39 files in other folders)
