[build-system]
requires = [
  "setuptools>=61", 
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "clearvoice"
version = "0.1.2"
description = "A unified inference platform for speech processing tasks"
authors = [
  { name = "Zhao Shengkui", email = "shengkui.zhao@alibaba-inc.com" },
  { name = "Pan Zexu", email = "zexu.pan@alibaba-inc.com" },
  { name = "Nguyen Trung Hieu", email = "trunghieu.nguyen@alibaba-inc.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "einops",
  "gdown",
  "huggingface-hub>=0.26.2",
  "joblib",
  "librosa==0.10.2.post1",
  "numpy>=1.24.3,<2.0",
  "opencv-python==4.10.0.84",
  "packaging",
  "pydub",
  "python_speech_features==0.6",
  "rotary_embedding_torch==0.8.3",
  "scenedetect==0.6.6",
  "scikit_learn",
  "scipy>=1.10.1",
  "soundfile==0.12.1",
  "torch>=2.0.1",
  "torchaudio>=2.0.2",
  "torchinfo",
  "torchvision",
  "tqdm",
  "yamlargparse"
]

[project.urls]
homepage = "https://github.com/modelscope/ClearerVoice-Studio"

[tool.setuptools.package-data]
"clearvoice" = ["config/**/*.yaml", "config/**/*.json"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["clearvoice*"]
